force-app/main/default/objects/Quote/fields/Mod_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mod_Tax_Amount__c</fullName>
    <formula>Tax__c * TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>