force-app/main/default/objects/Quote/fields/Modality_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Modality_Quote_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>This is the previous Salesforce ID from Modality Org.</inlineHelpText>
    <label>Modality Quote ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>