force-app/main/default/objects/Quote/fields/MP4_Archive_Package__c.field-meta.xml
<CustomField>
    <fullName>MP4_Archive_Package__c</fullName>
    <description>Automatically generate downloadable MP4 video files of an event’s audio, video and slides</description>
    <label>MP4 Archive Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>