force-app/main/default/objects/Quote/fields/Multicasting_Package_Description__c.field-meta.xml
<CustomField>
    <fullName>Multicasting_Package_Description__c</fullName>
    <label>Multicasting Package Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enable behind the firewall stream multicasting on your enterprise network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>