force-app/main/default/objects/Quote/fields/Number_of_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Subscriptions__c</fullName>
    <description>Specifically for corporate license pricing that is based on a specific number of Access Codes.</description>
    <label>Number of Access Codes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>