force-app/main/default/objects/Quote/fields/of_Quotes__c.field-meta.xml
<CustomField>
    <fullName>of_Quotes__c</fullName>
    <description>Power of One</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Quotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>