force-app/main/default/objects/Quote/fields/OLD_Recording_Line_N__c.field-meta.xml
<CustomField>
    <fullName>OLD_Recording_Line_N__c</fullName>
    <defaultValue>0.1000</defaultValue>
    <description>Rate used for the recording line dial out; this is the US Toll rate for recordings in On-Demand Audio conferences.</description>
    <inlineHelpText>Rate used for the recording line dial out; this is the US Toll rate for recordings in On-Demand Audio conferences. Ensure this rate matches the On-Demand Audio - US Toll rate.</inlineHelpText>
    <label>OLD-Recording Line Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>