force-app/main/default/objects/Quote/fields/On_Demand_Audio_Canada_Toll__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_Audio_Canada_Toll__c</fullName>
    <defaultValue>0.1000</defaultValue>
    <description>Rate for On-Demand Audio - Canada Toll</description>
    <inlineHelpText>Rate for On-Demand Audio - Canada Toll</inlineHelpText>
    <label>On-Demand Audio - Canada Toll</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>