force-app/main/default/objects/Quote/fields/On_Demand_Audio_Canada_Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_Audio_Canada_Toll_Free__c</fullName>
    <defaultValue>0.1000</defaultValue>
    <description>Rate for On-Demand Audio - Canada Toll Free</description>
    <inlineHelpText>Rate for On-Demand Audio - Canada Toll Free</inlineHelpText>
    <label>On-Demand Audio - Canada Toll Free</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>