force-app/main/default/objects/Quote/fields/On_Demand_Audio_Slides_Description__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_Audio_Slides_Description__c</fullName>
    <label>On-Demand Audio %2B Slides- Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event management support to create a direct to on-demand audio &amp; slides presentation for up to 60 minutes in duration and unlimited viewing for 12 months included.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>