force-app/main/default/objects/Quote/fields/On_Demand_Audio_Slides_Webcast__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_Audio_Slides_Webcast__c</fullName>
    <defaultValue>1850</defaultValue>
    <label>On-Demand Audio %2B Slides Webcast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>