force-app/main/default/objects/Quote/fields/On_Demand_Toll_Free_US_Canada__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_Toll_Free_US_Canada__c</fullName>
    <defaultValue>0.1000</defaultValue>
    <label>On-Demand Audio - US Toll Free</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>