force-app/main/default/objects/Quote/fields/On_site_Support__c.field-meta.xml
<CustomField>
    <fullName>On_site_Support__c</fullName>
    <defaultValue>2680</defaultValue>
    <inlineHelpText>An onsite encoder or onsite support technician delivers on-premise customized webcast support</inlineHelpText>
    <label>On-Site Field Production Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>