force-app/main/default/objects/Quote/fields/One_Time_Activation_Fee__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Activation_Fee__c</fullName>
    <defaultValue>3000.00</defaultValue>
    <description>Enter one-time activation fee (default is $3000.00) for set-up and implementation of a custom 8xx number.</description>
    <label>One-Time Activation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>