force-app/main/default/objects/Quote/fields/One_Time_Event__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Event__c</fullName>
    <label>One-Time Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Time Broadcast Audio webinar. Unlimited reservationless VoIP, US/CAN Toll and US/CAN Dial-Out audio conferencing, subject to an audio port capacity of 150</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>