force-app/main/default/objects/Quote/fields/Op_Assisted_Direct_Toll_Free_Rate_N__c.field-meta.xml
<CustomField>
    <fullName>Op_Assisted_Direct_Toll_Free_Rate_N__c</fullName>
    <defaultValue>0.210</defaultValue>
    <label>Direct Toll-Free Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>