force-app/main/default/objects/Quote/fields/Op_Assisted_Premium_Toll_Rate_N__c.field-meta.xml
<CustomField>
    <fullName>Op_Assisted_Premium_Toll_Rate_N__c</fullName>
    <defaultValue>0.2200</defaultValue>
    <label>Premium Toll Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>