force-app/main/default/objects/Quote/fields/Operator_Assisted_Direct_Toll_Rate_N__c.field-meta.xml
<CustomField>
    <fullName>Operator_Assisted_Direct_Toll_Rate_N__c</fullName>
    <defaultValue>0.180</defaultValue>
    <label>Direct Toll Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>