force-app/main/default/objects/Quote/fields/Order_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Effective_Date__c</fullName>
    <defaultValue>&quot;Date of Signature (below)&quot;</defaultValue>
    <label>Effective Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>