force-app/main/default/objects/Quote/fields/Overages_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>Overages_Per_Person__c</fullName>
    <defaultValue>6.00</defaultValue>
    <inlineHelpText>Overage Fee that is assessed on a per participant/per webcast basis</inlineHelpText>
    <label>Overages Per Person</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>