force-app/main/default/objects/Quote/fields/Overlay_Video__c.field-meta.xml
<CustomField>
    <fullName>Overlay_Video__c</fullName>
    <label>Overlay Video</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>