force-app/main/default/objects/Quote/fields/Platinum_Elite_Webcast_150_Participant__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Elite_Webcast_150_Participant__c</fullName>
    <defaultValue>3450</defaultValue>
    <label>Platinum Elite Webcast - 150 Participant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>