force-app/main/default/objects/Quote/fields/Platinum_Plus_Description__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Plus_Description__c</fullName>
    <label>Platinum Plus - Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-, live and post-event management support for a webcast that includes webcam &amp; streaming audio support for up to 500 participants and 60 minutes in duration. Speaker lines and unlimited on-demand viewing for 12 months included.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>