force-app/main/default/objects/Quote/fields/Platinum_Plus_Webcast_150_Participants__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Plus_Webcast_150_Participants__c</fullName>
    <defaultValue>2350</defaultValue>
    <label>Platinum Plus Webcast - 150 Participants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>