force-app/main/default/objects/Quote/fields/Platinum_Plus_Webcast__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Plus_Webcast__c</fullName>
    <label>Managed Webcast - Video (500)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>