force-app/main/default/objects/Quote/fields/Platinum_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Webinar__c</fullName>
    <label>Platinum Webinar</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>