force-app/main/default/objects/Quote/fields/Platinum_Webinar_Add_l_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Webinar_Add_l_Minutes__c</fullName>
    <defaultValue>250</defaultValue>
    <label>Platinum Webinar Add&#39;l Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>