force-app/main/default/objects/Quote/fields/Platinum_Webinar_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Webinar_Base_Price__c</fullName>
    <defaultValue>1850</defaultValue>
    <label>Platinum Webinar Base Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>