force-app/main/default/objects/Quote/fields/Premium_Operator_Assisted_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Premium_Operator_Assisted_Add_On__c</fullName>
    <defaultValue>150</defaultValue>
    <label>Premium Operator-Assisted Add-On</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>