force-app/main/default/objects/Quote/fields/Premium_Recording_Line__c.field-meta.xml
<CustomField>
    <fullName>Premium_Recording_Line__c</fullName>
    <formula>Op_Assisted_Premium_Dial_Out_Rate_N__c</formula>
    <label>Premium Recording Line</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>