force-app/main/default/objects/Quote/fields/ReadyTalk_Signer_Signature__c.field-meta.xml
<CustomField>
    <fullName>ReadyTalk_Signer_Signature__c</fullName>
    <label>ReadyTalk Signer Signature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>\s2\</fullName>
                <default>true</default>
                <label>\s2\</label>
            </value>
            <value>
                <fullName>.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>