force-app/main/default/objects/Quote/fields/Recording_Hosting_Op_Assist__c.field-meta.xml
<CustomField>
    <fullName>Recording_Hosting_Op_Assist__c</fullName>
    <defaultValue>0.2000</defaultValue>
    <inlineHelpText>By default, recording hosting (for all op-asst levels) is charged the per-min recording hosting rate.</inlineHelpText>
    <label>Recording Hosting (Op-Assist Svcs.)</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>