force-app/main/default/objects/Quote/fields/Recording_Hosting_Unlimited_Playbacks_N__c.field-meta.xml
<CustomField>
    <fullName>Recording_Hosting_Unlimited_Playbacks_N__c</fullName>
    <defaultValue>0.2000</defaultValue>
    <label>Recording Hosting (Unlimited Playbacks)</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>