force-app/main/default/objects/Quote/fields/Recording_Line_Auto__c.field-meta.xml
<CustomField>
    <fullName>Recording_Line_Auto__c</fullName>
    <defaultValue>0.1300</defaultValue>
    <inlineHelpText>By default, the recording line for Auto events is charged the Auto Toll-Free Rate.</inlineHelpText>
    <label>Auto Recording Line Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>