force-app/main/default/objects/Quote/fields/Registration_API_Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Registration_API_Setup_Fee__c</fullName>
    <defaultValue>300</defaultValue>
    <label>Registration API Setup Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>