force-app/main/default/objects/Quote/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <label>Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>60 Day Cancellation Notice</fullName>
            </value>
            <value>
                <fullName>This Agreement will automatically continue on a month to month basis unless Customer provides ReadyTalk with a 60 day written notice of cancellation.</fullName>
            </value>
            <value>
                <fullName>This Agreement will automatically continue on a month to month basis unless Customer provides ReadyTalk with a written notice of cancellation.</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>This agreement will automatically renew for successive 12 month terms on the True-Up Date (12 months from Effective Date) unless Customer provides ReadyTalk with written notice of termination at least 60 days prior to the True-Up Date.</fullName>
            </value>
            <value>
                <fullName>This agreement will automatically renew for successive 8 month terms on the True-Up Date (8 months from Effective Date) unless Customer provides ReadyTalk with written notice of termination at least 60 days prior to the True-Up Date.</fullName>
            </value>
            <value>
                <fullName>This agreement will automatically renew for successive 24 month terms on the True-Up Date (24 months from Effective Date) unless Customer provides ReadyTalk with written notice of termination at least 60 days prior to the True-Up Date.</fullName>
            </value>
            <value>
                <fullName>No renewal; subscription will end on the last day of the month</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>