force-app/main/default/objects/Quote/fields/Renewal_Effective__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Effective__c</fullName>
    <label>Renewal Effective</label>
    <type>Date</type>
</CustomField>