force-app/main/default/objects/Quote/fields/RT_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_Quote_Id__c</fullName>
    <externalId>true</externalId>
    <label>RT Quote Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>