force-app/main/default/objects/Quote/fields/Rush_Link_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Rush_Link_Delivery__c</fullName>
    <defaultValue>250</defaultValue>
    <inlineHelpText>Event set up and link delivery completed within one business day of initial reservation will be charged a rush fee.  This is a pass-through cost from Intercall, no margin added</inlineHelpText>
    <label>Rush Link Delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>