force-app/main/default/objects/Quote/fields/Screen_Sharing_Package__c.field-meta.xml
<CustomField>
    <fullName>Screen_Sharing_Package__c</fullName>
    <description>Launch a browser based screen share from the Live Studio</description>
    <label>Screen Sharing Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>