force-app/main/default/objects/Quote/fields/Screen_Sharing_Package_Description__c.field-meta.xml
<CustomField>
    <fullName>Screen_Sharing_Package_Description__c</fullName>
    <label>Screen Sharing Package Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Launch a browser based screen share from the Live Studio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>