force-app/main/default/objects/Quote/fields/Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Status__c</fullName>
    <label>Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Reviewed</fullName>
                <default>true</default>
                <label>Not Reviewed</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Update Quote</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>No Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>