force-app/main/default/objects/Quote/fields/Service_Term__c.field-meta.xml
<CustomField>
    <fullName>Service_Term__c</fullName>
    <label>Service Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Month to Month</fullName>
            </value>
            <value>
                <fullName>12 Months (Pre-Pay)</fullName>
            </value>
            <value>
                <fullName>12 Months (Paying Monthly)</fullName>
            </value>
            <value>
                <fullName>24 Months (Pre-Pay)</fullName>
            </value>
            <value>
                <fullName>24 Months (Paying Monthly)</fullName>
            </value>
            <value>
                <fullName>36 Months (Paying Monthly)</fullName>
            </value>
            <value>
                <fullName>36 Months (Pre-Pay)</fullName>
            </value>
            <value>
                <fullName>1 Time Event</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>