force-app/main/default/objects/Quote/fields/Service_Terms__c.field-meta.xml
<CustomField>
    <fullName>Service_Terms__c</fullName>
    <label>Service Terms</label>
    <length>100</length>
    <type>Text</type>
</CustomField>