force-app/main/default/objects/Quote/fields/Sign_By_Hand__c.field-meta.xml
<CustomField>
    <fullName>Sign_By_Hand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when customers want to skip Docusign and sign by hand.</description>
    <label>Sign By Hand</label>
    <type>Checkbox</type>
</CustomField>