force-app/main/default/objects/Quote/fields/Simulive_Add_l_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Simulive_Add_l_Minutes__c</fullName>
    <defaultValue>75.00</defaultValue>
    <inlineHelpText>Per 30 add&apos;l minutes, per 100 add&apos;l participants.</inlineHelpText>
    <label>Simulive Add&apos;l Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>