force-app/main/default/objects/Quote/fields/Simulive_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Simulive_Base_Price__c</fullName>
    <defaultValue>300.00</defaultValue>
    <inlineHelpText>Base price is per event, up to 100 participants, up to 60 minutes</inlineHelpText>
    <label>Simulive Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>