force-app/main/default/objects/Quote/fields/Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms__c</fullName>
    <inlineHelpText>Any special terms on this deal</inlineHelpText>
    <label>Special Terms</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>