force-app/main/default/objects/Quote/fields/Stream_Signal_Test__c.field-meta.xml
<CustomField>
    <fullName>Stream_Signal_Test__c</fullName>
    <defaultValue>550</defaultValue>
    <inlineHelpText>Perform a video/VCU webcast test for no more than 15 minutes and with up to five attendees. Requires a video event to be scheduled. Billed per test.</inlineHelpText>
    <label>Stream/Signal Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>