force-app/main/default/objects/Quote/fields/Tax_Note__c.field-meta.xml
<CustomField>
    <fullName>Tax_Note__c</fullName>
    <defaultValue>&quot;Does not include applicable sales tax.&quot;</defaultValue>
    <label>Tax Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>