force-app/main/default/objects/Quote/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <defaultValue>&quot;This Services and Pricing Schedule is governed by the terms of the Subscription License Order (the “Agreement”) between the parties. If there is a conflict between the terms of this Services and Pricing Schedule and the Subscription License Order, this Schedule governs. Except as otherwise provided in the Agreement, this Schedule may only be amended or modified, in whole or in part, by a written instrument signed by the parties to the Agreement. Renewal Terms are as set forth in the underlying Agreement.&quot;</defaultValue>
    <label>Terms</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>