force-app/main/default/objects/Quote/fields/Total_Audio_Slides_Webcast_150_Parti__c.field-meta.xml
<CustomField>
    <fullName>Total_Audio_Slides_Webcast_150_Parti__c</fullName>
    <label>Total: Audio &amp; Slides - 150 Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>