force-app/main/default/objects/Quote/fields/Total_On_Demand_Audio_Slides__c.field-meta.xml
<CustomField>
    <fullName>Total_On_Demand_Audio_Slides__c</fullName>
    <label>Total: On-Demand Audio %2B Slides</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>