force-app/main/default/objects/Quote/fields/Total_On_Demand_Platinum_Elite__c.field-meta.xml
<CustomField>
    <fullName>Total_On_Demand_Platinum_Elite__c</fullName>
    <label>Total: On-Demand Platinum Elite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>