force-app/main/default/objects/Quote/fields/Total_Platinum_Elite_150_Participant__c.field-meta.xml
<CustomField>
    <fullName>Total_Platinum_Elite_150_Participant__c</fullName>
    <label>Total: Platinum Elite - 150 Participant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>