force-app/main/default/objects/Quote/fields/Total_Platinum_Plus_150_Participants__c.field-meta.xml
<CustomField>
    <fullName>Total_Platinum_Plus_150_Participants__c</fullName>
    <label>Total: Platinum Plus - 150 Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>