force-app/main/default/objects/Quote/fields/Total_Platinum_Plus__c.field-meta.xml
<CustomField>
    <fullName>Total_Platinum_Plus__c</fullName>
    <label>Total: Platinum Plus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>