force-app/main/default/objects/Quote/fields/True_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>True_Up_Date__c</fullName>
    <label>True-Up Date</label>
    <type>Date</type>
</CustomField>