force-app/main/default/objects/Quote/fields/Unlimited_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Unlimited_Webinar__c</fullName>
    <label>Unlimited Webinar Subscription</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>