force-app/main/default/objects/Quote/fields/VAT_20__c.field-meta.xml
<CustomField>
    <fullName>VAT_20__c</fullName>
    <formula>TotalPrice * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>