force-app/main/default/objects/Quote/fields/Video_Bridging_Package_Description__c.field-meta.xml
<CustomField>
    <fullName>Video_Bridging_Package_Description__c</fullName>
    <label>Video Bridging Package Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-service multi-party video bridging for presenters. Available with Premiere VCU subscriptions only</fullName>
                <default>true</default>
                <label>Self-service multi-party video bridging for presenters. Available with Premiere VCU subscriptions only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>