force-app/main/default/objects/Quote/fields/Video_Slides_Add_l_30_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Video_Slides_Add_l_30_Minutes__c</fullName>
    <defaultValue>550</defaultValue>
    <inlineHelpText>Each additional 100 webcam/video + slide webcast viewers</inlineHelpText>
    <label>Additional 30 Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>