force-app/main/default/objects/Quote/fields/Video_Webcast_3000__c.field-meta.xml
<CustomField>
    <fullName>Video_Webcast_3000__c</fullName>
    <label>Video Webcast (3000)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>