force-app/main/default/objects/Quote/fields/Video_Webcast_500_Set_of_12__c.field-meta.xml
<CustomField>
    <fullName>Video_Webcast_500_Set_of_12__c</fullName>
    <label>Video Webcast (500) - Set of 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>