force-app/main/default/objects/Quote/fields/VoIP_Audio__c.field-meta.xml
<CustomField>
    <fullName>VoIP_Audio__c</fullName>
    <defaultValue>0.0500</defaultValue>
    <inlineHelpText>Rate for per-minute VoIP usage.</inlineHelpText>
    <label>VoIP Audio</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>