force-app/main/default/objects/Quote/fields/Web_Conferencing_N__c.field-meta.xml
<CustomField>
    <fullName>Web_Conferencing_N__c</fullName>
    <defaultValue>0.2000</defaultValue>
    <inlineHelpText>Rate for per-minute web usage when associated with a Product with no included web (e.g. Per-Minute Conferencing).</inlineHelpText>
    <label>Web Per-Minute</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>