force-app/main/default/objects/Quote/fields/Web_Conferencing_Services_Charge__c.field-meta.xml
<CustomField>
    <fullName>Web_Conferencing_Services_Charge__c</fullName>
    <description>To use for One-Time Web Conferencing Services.</description>
    <label>Web Conferencing Services Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>